# structured-json-extractor

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt  run.py
app/: __init__.py  api.py  cli.py  config.py  extractor.py  logger.py  main.py  prompts.py  retry_handler.py  schemas.py  utils.py  validators.py
sample_inputs/: customer_email.txt  receipt.txt  support_ticket.txt
tests/: test_extraction.py  test_validation.py
