[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "structured-json-extractor"
version = "1.0.0"
description = "Extract structured JSON from unstructured text using LLMs"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "instructor",
    "pydantic",
    "python-dotenv",
    "tenacity",
    "rich",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
